feat:remove guardrails - this shall go in a llm proxy configuration
